2025-02-18         Manuel Collado       <m-collado@users.sourceforge.net>

	* awklib/Makefile.am: Fix bug in make uninstall
	* Makefile.am: Reorder SUBDIRS to let install-(html|pdf) work
	* awklib/xml/xmlbase.awk: Fix errata

2025-02-14         Manuel Collado       <m-collado@users.sourceforge.net>

	* doc/xhtml2*.awk: Moved to awklib/xml
	* doc/Makefile.am: Adapted to the above and fix install-(html|pdf)
	* Makefile.am: Reorder SUBDIRS to let install-(html|pdf) work
	* awklib/xml/xmlbase.awk: Fix errata

2024-12-31         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Update for version 1.1.2.
	* configure.ac (AC_INIT): Bump version to 1.1.2.
	* Makefile.am (xml_enc_converted.touch): Pass AWK=$(GAWKPROG) in the
	environment.
	* xml-conv-enc: Remove bogus logic to find an awk program, and
	instead use the $AWK environment variable, which will be set to
	$(GAWKPROG) by the Makefile.

2018-03-30         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Update for version 1.1.1.
	* configure.ac (AC_INIT): Bump version to 1.1.1.

2017-11-25         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Fix typo.

2017-11-19         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Update for version 1.1.0.
	* configure.ac (AC_INIT): Bump version to 1.1.0.
	* xml_interface.c (xml_get_record): If API version 2 or later, must
	add the new field_width argument. In the declaration, populate the
	VERSIOn attribute as user input instead of a string, since it should
	be a strnum.
	(take_control_of): Replace emalloc+memset with ezalloc for slightly
	improved performance.
	(update_xmlattr): Populate the attribute values as user input instead
	of strings, so numeric strings will now be treated as strnums.

2017-10-03         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Update for version 1.0.7.
	* configure.ac (AC_INIT): Bump version to 1.0.7.

2017-09-03         Andrew J. Schorr     <ajschorr@fedoraproject.org>
