@@ -1,0 +1,218 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
+
+    <title>XHTML2DOC</title>
+
+    <meta content="February 2025" name="date" />
+
+    <meta content="3am" name="section" />
+
+    <meta content="GAWK Extension Library (gawkextlib)" name="source" />
+
+    <meta content="GNU Awk Extension Modules" name="manual" />
+  </head>
+
+  <body>
+    <h1>xhtml2doc</h1>
+
+    <h2>NAME</h2>
+
+    <p>generate manual pages or Texinfo sections from a restricted XHTML
+    source.</p>
+
+    <h2 class="man">SYNOPSIS</h2>
+
+    <h2 class="texi" title="xhtml2doc Usage">USAGE</h2>
+
+    <pre>gawk -f <b>xhtml2man</b> <i>xhtml-file</i>
+gawk [<i>options</i>] -f <b>xhtml2texi</b> <i>xhtml-file</i></pre>
+
+    <h2 title="xhtml2doc Description">DESCRIPTION</h2>
+
+    <p>The <code>xhtml2man</code> and <code>xhtml2texi</code> awk scripts can
+    generate both troff-formatted manual pages and/or texi-formatted document
+    sections from a specialized <code>xhtml</code> source file. The generated
+    file has the same name of the source with the <code>.xhtml</code> suffix
+    changed either to the man section name or to <code>.texi</code>.</p>
+
+    <p>Options for the <code>xhtml2texi</code> conversion are passed as
+    <code>-v <i>option</i>=<i>value</i></code> arguments in the command
+    line:</p>
+
+    <dl>
+      <dt>TOPLEVEL=(chapter/section)</dt>
+
+      <dd>The <code>Texinfo</code> section level generated by the
+      <code>&lt;h1&gt;</code> tag. Default "<code>section</code>".</dd>
+
+      <dt>NUMBERLEVEL=(0..4)</dt>
+
+      <dd>The maximum <code>&lt;h<i>n</i>&gt;</code> tag that generates
+      numbered sections in the Texinfo document. Default 2.</dd>
+
+      <dt>NODELEVEL=(0..4)</dt>
+
+      <dd>The maximum <code>&lt;h<i>n</i>&gt;</code> tag that generates nodes
+      in the Info document. Default 2.</dd>
+    </dl>
+
+    <p>In all cases the effective maximum numbered or node heading is
+    "<code>subsubsection</code>"</p>
+
+    <h3><code>xhtml2man</code> specific HTML tags</h3>
+
+    <p>Required tags are marked as **. Sample values correspond to this
+    manpage.</p>
+
+    <p>Inside <code>&lt;head&gt;</code>:</p>
+
+    <ul>
+      <li>**<code>&lt;title&gt;<i>XHTML2DOC</i>&lt;/title&gt;</code> (short
+      title, in caps)</li>
+
+      <li>**<code>&lt;meta name="section" content="<i>3am</i>"/&gt;</code>
+      (the manpage section: 1, 2, ...)</li>
+
+      <li>**<code>&lt;meta name="date" content="<i>February
+      2025</i>"/&gt;</code> (date of the last nontrivial update)</li>
+
+      <li>**<code>&lt;meta name="source" content="<i>GAWK Extension Library
+      (gawkextlib)</i>"/&gt;</code> (the global entity that provides this
+      manpage)</li>
+
+      <li>**<code>&lt;meta name="manual" content="<i>GNU Awk Extension
+      Modules</i>"/&gt;</code> (the documentation set to which the manpage
+      belongs)</li>
+    </ul>
+
+    <p>Inside <code>&lt;body&gt;</code>:</p>
+
+    <ul>
+      <li>**<code>&lt;h1&gt;<i>xhtml2doc</i>&lt;/h1&gt;</code> (name of the
+      documented utility, usually lowercase)</li>
+
+      <li>**<code>&lt;h2&gt;NAME&lt;/h2&gt;&lt;p&gt;<i>generate manual pages
+      ...</i>&lt;/p&gt;</code> (first main section, with one-line short
+      description of the utility that will be prepended with the utility name
+      and a dash in the generated troff file)</li>
+
+      <li><code>&lt;h2&gt;<i>SYNOPSIS</i>&lt;/h2&gt;</code> (other main
+      sections: SYNOPSIS, DESCRIPTION, NOTES, AUTHORS, ...)</li>
+
+      <li><code>&lt;h3&gt;<i>Unsupported tags</i>&lt;/h3&gt;</code>
+      (subsections)</li>
+    </ul>
+
+    <h3><code>xhtml2texi</code> specific HTML tags</h3>
+
+    <p>Required tags are marked as **. Tags marked as * are only required if
+    the document section is in fact a manpage to be formatted as Texinfo.
+    Sample values correspond to this manpage.</p>
+
+    <ul>
+      <li>**<code>&lt;h1&gt;<i>xhtml2doc</i>&lt;/h1&gt;</code> (name of the
+      documented utility, usually lowercase)</li>
+
+      <li>*<code>&lt;title&gt;<i>XHTML2DOC</i>&lt;/title&gt;</code> (name of
+      the documented utility, will be converted to lowercase)</li>
+
+      <li>*<code>&lt;h2&gt;NAME&lt;/h2&gt;&lt;p&gt;<i>generate manual pages
+      ...</i>&lt;/p&gt;</code> (NAME section, with one-line short description
+      of the utility that will be prepended with the utility name and a dash
+      in the generated Texinfo file)</li>
+
+      <li><code>&lt;h<i>x</i>&gt;<i>Unsupported
+      tags</i>&lt;/h<i>x</i>&gt;</code> (<i>x</i>=2,3,..: other sections,
+      indexed by the whole title)</li>
+
+      <li><code>&lt;h<i>x</i>
+      title="<i>index-term</i>"&gt;<i>...</i>&lt;/h<i>x</i>&gt;</code>
+      (<i>x</i>=2,3,..: other sections, indexed by the <i>index-term</i>)</li>
+
+      <li><code>&lt;dfn&gt;<i>defined-term</i>&lt;/dfn&gt;</code>
+      (<i>defined-term</i> indexed as such)</li>
+
+      <li><code>&lt;dfn
+      title="<i>index-term</i>"&gt;<i>defined-term</i>&lt;/dfn&gt;</code>
+      (<i>defined-term</i> indexed by the <i>index-term</i>)</li>
+    </ul>
+
+    <h3>General supported XHTML tags</h3>
+
+    <p>The XHTML source files can use the following tags to generate contents
+    in the <code>&lt;body&gt;</code> part.</p>
+
+    <pre>&lt;div&gt;      block fragment
+&lt;span&gt;     inline fragment
+&lt;dl&gt;       definition list
+&lt;dt&gt;       definition term
+&lt;dd&gt;       definition paragraph
+&lt;ol&gt;       numbered list
+&lt;ul&gt;       bulleted list 
+&lt;li&gt;       list item
+&lt;pre&gt;      preformatted text
+&lt;br&gt;       line break
+&lt;b&gt;        boldface
+&lt;i&gt;        italics
+&lt;code&gt;     monospace</pre>
+
+    <p>Partially supported, and only with <code>xhtml2texi</code>:</p>
+
+    <pre>&lt;table&gt;    table
+&lt;col&gt;      column specification
+&lt;tr&gt;       table row
+&lt;th&gt;       table header
+&lt;td&gt;       table cell</pre>
+
+    <h3>Conditional tags</h3>
+
+    <p>The same XHTML source can be used to generate both a manpage and a
+    Texinfo section. The class attribute of any tag can be used to process it
+    only in one alternative.</p>
+
+    <ul>
+      <li><code>&lt;<i>xx</i> class="man" ...&gt;...&lt;/<i>xx</i>&gt;</code>
+      (processed only by <code>xhtml2man</code>)</li>
+
+      <li><code>&lt;<i>xx</i> class="texi" ...&gt;...&lt;/<i>xx</i>&gt;</code>
+      (processed only by <code>xhtml2texi</code>)</li>
+    </ul>
+
+    <p>Tags with a <code>class</code> attribute with values other than
+    <code>man</code> or <code>texi</code> are fully ignored, i.e., neither the
+    tag nor its contents is processed.</p>
+
+    <h3>Unsupported tags</h3>
+
+    <p>Tags not listed before are not supported. The tag itself is ignored but
+    its contents is processed.</p>
+
+    <h2 class="man">BUGS</h2>
+
+    <h2 class="texi" title="xhtml2doc Limitations">LIMITATIONS</h2>
+
+    <p><code>&lt;dfn&gt;</code> inside &lt;<code>h<i>n</i>&gt;</code> section
+    titles is ignored.</p>
+
+    <p>HTML tags not supported are ignored.</p>
+
+    <div class="man"><h2>SEE ALSO</h2><p><i>XML Processing With gawk</i>,
+    <i>man-pages(7)</i>, <i>groff(7)</i>.</p><h2
+    class="man">AUTHOR</h2><p>Manuel Collado,
+    <b>m-collado@users.sourceforge.net</b>.</p><h2 class="man">COPYING
+    PERMISSIONS</h2><p>Copyright (C) 2025, Free Software Foundation,
+    Inc.</p><p>Permission is granted to make and distribute verbatim copies of
+    this manual page provided the copyright notice and this permission notice
+    are preserved on all copies.</p><p>Permission is granted to copy and
+    distribute modified versions of this manual page under the conditions for
+    verbatim copying, provided that the entire resulting derived work is
+    distributed under the terms of a permission notice identical to this
+    one.</p><p>Permission is granted to copy and distribute translations of
+    this manual page into another language, under the above conditions for
+    modified versions, except that this permission notice may be stated in a
+    translation approved by the Foundation.</p></div>
+  </body>
+</html>
