@@ -1,0 +1,1 @@
+.so man3/xhtml2doc.3am
